--- a/public/preview.html
+++ b/public/preview.html
@@ -57,8 +57,8 @@
 			<!-- input & submit  -->
 			<form>
 				<div class="form-group">
-					<label for="burgerDiy" class="hvr-icon-down">Customize Your Burger ↷</label><br>
-					<input type="text" placeholder=" Hamburger" id="burgerDiy">
+					<label for="burgerInput" class="hvr-icon-down">Customize Your Burger ↷</label><br>
+					<input type="text" placeholder=" Hamburger" id="burgerInput">
 					<br>
 					<button class="btn btn-warning" id="submit" type="submit" name="action">
 						SU<i class="fas fa-hamburger"></i>MIT
@@ -68,7 +68,7 @@
 
 			<!--  form 2  -->
 			<div class="row">
-				<div class="col-sm-6 wow fadeIn box-r" data-wow-delay='2s'>
+				<div class="col-sm-6 wow fadeIn box-r">
 					<form action="" method="post" class="form-r"></form>
 					<P><i class="fas fa-utensils"> Processing</i></P>
 					<hr>
